# openglow_cnc

./: .gitignore  CMakeLists.txt  COPYING  README.md
doc/: doxy.config.in
src/: common.h  config.h  main.c  openglow-cnc.h
src/cli/: cli.c  cli.h  console.c  console.h  messages.c  messages.h  socket.c  socket.h
src/hardware/: hardware.c  hardware.h  laser.c  laser.h  limits.c  limits.h  openglow.c  openglow.h  step_drv.c  step_drv.h  stepgen.c  stepgen.h  switches.c  switches.h
src/motion/: gcode.c  gcode.h  grbl_glue.c  grbl_glue.h  motion.c  motion.h  motion_control.c  motion_control.h  planner.c  planner.h  segment.c  segment.h
src/system/: fsm.c  fsm.h  settings.c  settings.h  system.c  system.h
